<resources>
    <string name="app_name">箴言</string>

    <!-- common -->
    <string name="search">搜索</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>

    <!-- main -->
    <string name="tab_motto">格言</string>
    <string name="tab_rule">定律</string>
    <string name="tab_effect">效应</string>
    <string name="tab_wicked">反鸡汤</string>

    <string name="store">收藏</string>
    <string name="setup">设置</string>

    <string name="user_empty">无名侠</string>
    <string name="user_login">已登陆</string>

    <!-- maxim -->
    <string name="data_comment">写下评论</string>
    <string name="data_load">数据加载中&#8230;</string>
    <string name="data_empty">暂无相关数据</string>
    <string name="data_error">网络异常，请点击重试</string>
    <!-- user -->
    <string name="phone">手机</string>
    <string name="secret">密码</string>
    <string name="validate">验证码</string>
    <string name="login">登录</string>
    <string name="login_not">未登录</string>
    <string name="login_other">第三方登陆</string>
    <string name="register">注册</string>
    <string name="register_success">注册成功</string>
    <string name="registered">手机号已注册,请返回登录</string>
    <string name="login_remember">自动登录</string>
    <string name="login_register">注册账户</string>
    <string name="personal">个人资料</string>
    <string name="logout">退出登录</string>

    <string name="user_name">昵称</string>
    <string name="user_sex">性别</string>
    <string name="user_email">邮箱</string>

    <!-- setup -->
    <string name="wallpaper">设置壁纸</string>
    <string name="version">软件版本</string>
    <string name="about">关于作者</string>
    <string name="app_desc">道可道，非常道；名可名，非常名。\n\n无名，天地之始；有名，万物之母。\n\n故常无欲，以观其妙；常有欲，以观其徼。\n\n此两者同出而异名，同谓之玄。\n\n玄之又玄，众妙之门。\n</string>
    <string name="app_author">三刀1852874319@qq.com</string>

    <!-- update -->
    <string name="update_not">已是最新版</string>
    <string name="update_new">发现新版本</string>
    <string name="update_content">更新内容：</string>
    <string name="update_now">立即更新</string>
    <string name="update_later">稍后更新</string>
    <string name="update_downing">正在下载&#8230;</string>
    <string name="update_down_error">下载异常</string>
    <string name="update_error">检查更新失败</string>

    <!-- icon font code -->
    <string name="font_store">\ue900</string>
    <string name="font_setup">\ue901</string>
    <string name="font_show">\ue903</string>
    <string name="font_hide">\ue904</string>
    <string name="font_secret">\ue907</string>
    <string name="font_male">\ue908</string>
    <string name="font_send">\ue909</string>
    <string name="font_female">\ue902</string>
    <string name="font_validate">\ue910</string>
    <string name="font_phone">\ue911</string>
    <string name="font_comment">\ue912</string>
    <string name="font_login">\ue90a</string>
    <string name="font_check">\ue90e</string>
    <string name="font_checked">\ue90f</string>
    <string name="font_qq">\ue90d</string>
    <string name="font_wechat">\ue90b</string>
    <string name="font_weibo">\ue90c</string>
    <string name="font_arrow">\ue905</string>
    <string name="font_search">\ue906</string>
</resources>
