<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        app:titleTextAppearance="@style/ToolBarTitle" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/tvAppTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_horizontal"
            android:padding="@dimen/space_large"
            android:text="@string/app_name"
            android:textColor="@color/font_white"
            android:textSize="@dimen/font_large" />

        <TextView
            android:id="@+id/tvAppDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAppTitle"
            android:padding="@dimen/space_large"
            android:text="@string/app_desc"
            android:textColor="@color/font_light"
            android:textSize="@dimen/font_normal" />


        <RelativeLayout
            android:id="@+id/layAppAuthor"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_below="@id/tvAppDesc">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentTop="true"
                android:background="@color/transparent_20" />

            <TextView
                android:id="@+id/tvAppAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingStart="@dimen/space_large"
                android:text="@string/app_author"
                android:textColor="@color/font_light"
                android:textSize="@dimen/font_normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_alignParentBottom="true"
                android:background="@color/transparent_20" />
        </RelativeLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
