<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/transparent"
        app:titleTextAppearance="@style/ToolBarTitle" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/space_normal"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/trans_line" />

            <RelativeLayout
                android:id="@+id/layWallpaper"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <TextView
                    android:id="@+id/tvWallpaper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/space_normal"
                    android:text="@string/wallpaper"
                    android:textColor="@color/font_white"
                    android:textSize="@dimen/font_normal" />

                <lemon.pear.maxim.widget.IconTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/space_normal"
                    android:text="@string/font_arrow"
                    android:textColor="@color/font_white"
                    android:textSize="@dimen/font_icon" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/trans_line" />

            <RelativeLayout
                android:id="@+id/layVersion"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/space_normal"
                    android:text="@string/version"
                    android:textColor="@color/font_white"
                    android:textSize="@dimen/font_normal" />

                <TextView
                    android:id="@+id/txtVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/version"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_normal" />

                <lemon.pear.maxim.widget.IconTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/space_normal"
                    android:text="@string/font_arrow"
                    android:textColor="@color/font_white"
                    android:textSize="@dimen/font_icon" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginEnd="@dimen/space_normal"
                android:layout_marginStart="@dimen/space_normal"
                android:background="@color/trans_line" />

            <RelativeLayout
                android:id="@+id/layAbout"
                android:layout_width="match_parent"
                android:layout_height="52dp">

                <TextView
                    android:id="@+id/tvAbout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/space_normal"
                    android:text="@string/about"
                    android:textColor="@color/font_white"
                    android:textSize="@dimen/font_normal" />

                <lemon.pear.maxim.widget.IconTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="@dimen/space_normal"
                    android:text="@string/font_arrow"
                    android:textColor="@color/font_white"
                    android:textSize="@dimen/font_icon" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/trans_line" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>
